인가 로직 추가.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,6 +6,13 @@
 </head>
 <body>
 Welcome, <span th:text="${loginName}" /><br />
+<a href="/admin">admin</a>
+<br>
+<a href="/private-project">private-project</a>
+<br>
+<a href="/public-project">public-project</a>
+<br>
 <a href="/logout">Logout</a>
+<br>
 </body>
 </html>
